# Web-Application

./: .env.template  Dockerfile  docker-compose.yml  package-lock.json  pyproject.toml
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/components/: Card.jsx
client/src/pages/: Home.jsx
server/: pyproject.toml
server/app/: main.py
server/app/core/: config.py
server/app/core/models/: __init__.py  db_settings.py  user.py
server/public/: Схема базы данных GymBro.drawio
