[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["VladG <gricenkovlad007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
asyncpg = "^0.30.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"